data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_438.wast
;; Test 9: Design a test with `nop` instructions dispersed within an array manipulation sequence followed by a `br_if` condition. Validate the branching decision based on array contents.

(assert_invalid
  (module
    (func $test (param $0 i32) (result i32)
      (local $i i32) (local $result i32)
      (local.set $i (i32.const 0))
      (local.set $result (i32.const 0))
      (loop $top
        nop
        (i32.eq (local.get $0) (i32.const 0))
        (br_if $top)
        (local.set $result (i32.add (local.get $result) (i32.const 1)))
        (local.set $0 (i32.sub (local.get $0) (i32.const 1)))
      )
      nop
      (local.get $result)
    )
  ) 
)